[package]
name = "mem_dbg-derive"
version = "0.1.0"
edition = "2021"
description = "Implementation of #[derive(MemSize, MemDbg)] for mem_dbg"
repository = "https://github.com/zommiommy/mem_dbg/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["allocation", "debug", "memory"]
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>", "Sebastiano Vigna <sebastiano.vigna@unimi.it>"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"
