[package]
name = "mem_dbg-derive"
version = "0.3.0"
edition = "2024"
description = "Procedural macros for mem_dbg"
repository = "https://github.com/zommiommy/mem_dbg-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["allocation", "debug", "memory"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
rust-version = "1.85.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["derive", "parsing", "printing"] }

[features]
offset_of_enum = []
