[package]
name = "mem_dbg"
version = "0.3.3"
edition = "2024"
description = "Traits and associated procedural macros to display recursively the layout and memory usage of a value"
repository = "https://github.com/zommiommy/mem_dbg/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["allocation", "debug", "memory"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
	"Luca Cappelletti <cappelletti.luca94@gmail.com>",
]
rust-version = "1.85.0"

[dependencies]
bitflags = "2.4.1"
mem_dbg-derive = { version = "=0.2.0", path = "../mem_dbg-derive", optional = true }
mmap-rs = { version = "0.6.1", optional = true }
half = { version = "2.0.4", optional = true }
rand = { version = "0.9.0", optional = true, features = ["small_rng"] }
maligned = { version = "0.2.1", optional = true }
cap = { version = "0.1.2", optional = true }
deepsize = { version = "0.2.0", optional = true }
get-size = { version = "0.1.4", optional = true }

[dev-dependencies]
paste = "1.0.15"

[features]
default = ["std", "alloc", "derive"]
std = []
alloc = [] # No-op for backward compatibility
derive = ["mem_dbg-derive"]
maligned = ["dep:maligned"]
offset_of_enum = ["derive", "mem_dbg-derive/offset_of_enum"]

[[example]]
name = "bench_hash_map"
required-features = ["std", "derive", "cap", "deepsize", "get-size"]

[[example]]
name = "example"
required-features = ["std", "derive"]

[[example]]
name = "readme"
required-features = ["std", "derive"]
