[package]
name = "mem_dbg"
version = "0.4.3"
edition = "2024"
description = "Traits and associated procedural macros to display recursively the layout and memory usage of a value"
repository = "https://github.com/zommiommy/mem_dbg-rs"
license = "Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
keywords = ["allocation", "debug", "memory"]
categories = ["development-tools::debugging"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
	"Luca Cappelletti <cappelletti.luca94@gmail.com>",
]
rust-version = "1.85"

# docs.rs builds on stable, so we cannot enable the nightly-only
# `offset_of_enum` feature; we enable every other feature so all third-party
# type implementations are documented.
[package.metadata.docs.rs]
features = ["std", "derive", "half", "maligned", "mmap-rs", "rand", "aliasable", "maybe-dangling"]

[dependencies]
bitflags = "2.4.1"
mem_dbg-derive = { workspace = true, optional = true }
mmap-rs = { version = "0.7.0", optional = true }
half = { version = "2.0.4", optional = true }
rand = { version = "0.10.0", optional = true }
maligned = { version = "0.2.1", optional = true }
parking_lot = { version = "0.12", optional = true }
hashbrown = "0.16"
aliasable = { version = "0.1.3", optional = true }
maybe-dangling = { version = "0.1.2", optional = true }

[dev-dependencies]
anyhow = "1"
comfy-table = "=7.2.1"
paste = "1.0.15"
cap = "0.1.2"
get-size = "0.1.4"
deepsize = "0.2.0"
insta = "1.46.1"
regex = "1"
criterion = "0.8"

[features]
default = ["std", "derive"]
std = []
derive = ["mem_dbg-derive"]
# parking_lot is not no_std and its guard MemSize impls reuse the std-gated
# `deref_pointer_size` helper, so the feature requires `std`.
parking_lot = ["std", "dep:parking_lot"]
offset_of_enum = ["derive", "mem_dbg-derive/offset_of_enum"]

[[example]]
name = "btree_set_comp"
required-features = ["std"]

[[example]]
name = "comparison"
required-features = ["std", "derive"]

[[example]]
name = "example"
required-features = ["std", "derive"]

[[example]]
name = "readme"
required-features = ["std", "derive"]

[[bench]]
name = "mem_size"
harness = false
required-features = ["std"]
