[package]
name = "bench_hash_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cap = "0.1.2"
deepsize = "0.2.0"
get-size = { version = "0.1.4", features = ["derive"] }
mem_dbg = { path = "../.." }
size-of = "0.1.5"

