[package]
name = "bench_hash_map"
description = "A simple benchmark showing the output and performance of a few crates tracking heap usage of a value"
version = "0.1.0"
edition = "2021"

[dependencies]
mem_dbg = { path = "../.." }
cap = "0.1.2"
deepsize = "0.2.0"
get-size = "0.1.4"
size-of = "0.1.5"

[features]
default = ["std"]
std = ["mem_dbg/std"]